<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="402dp"
            android:orientation="vertical">

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="402dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="101dp"
                android:layout_weight="1"
                android:text="@string/sexo"
                android:textAlignment="center"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/sexo"
                android:layout_width="235dp"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/sexoMasc" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sexoFem" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:onClick="sexo"
            android:text="@string/enviar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>