<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="211dp"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_weight="1"
                    android:text="@string/lampada01" />

                <ToggleButton
                    android:id="@+id/toggleButton1"
                    android:layout_width="117dp"
                    android:layout_height="59dp"
                    android:checked="false"
                    android:text="ToggleButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="pegarTexto"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/idAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="77dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="53dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />

                <LinearLayout
                    android:layout_width="276dp"
                    android:layout_height="144dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="136dp"
                        android:layout_height="44dp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clicklLong" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="proxTela"
                        android:text="@string/proxTela" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>